--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,9 +1,10 @@
 @import "tailwindcss";
 
-/* // primary: teal-900
+@theme {
+  --color-primary: theme(colors.teal.900);
+  --color-light: theme(colors.slate.100);
+  --color-dark: theme(colors.slate.900);
+  --color-accent: theme(colors.red.400);
+}
 
-// accent: teal-400
-
-// background: slate-100
-
-// textDark: slate-900 */
+/* TODO: add font families */
