removing old config

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -8,3 +8,10 @@
 }
 
 /* TODO: add font families */
+/* fontFamily: {
+        sans: ["Inter", "sans-serif"],
+        mono: ["Share Tech Mono", "monospace"],
+        tech: ["Chakra Petch", "sans-serif"],
+        logo: ["Bungee", "cursive"],
+      },
+    }, */
